Crash - delete node with a driven parameter #57996

Closed
opened 2018-11-22 12:13:31 +01:00 by Jurek · 5 comments

System Information
win 10
Nvidia GeForce GTX 1060 6GB

Blender Version
blender-2.80.0-git.1844ccd5210-windows64

Short description of error
Blender crashes when deleting a node with a parameter that has a driver.
crash test.blend

Exact steps for others to reproduce the error

  1. Open attachef file
  2. Delete 'value' node in shader editor
**System Information** win 10 Nvidia GeForce GTX 1060 6GB **Blender Version** blender-2.80.0-git.1844ccd5210-windows64 **Short description of error** Blender crashes when deleting a node with a parameter that has a driver. [crash test.blend](https://archive.blender.org/developer/F5679645/crash_test.blend) **Exact steps for others to reproduce the error** 1. Open attachef file 2. Delete 'value' node in shader editor
Author

Added subscriber: @solartistic

Added subscriber: @solartistic
Member

Added subscribers: @Sergey, @lichtwerk

Added subscribers: @Sergey, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-11-22 12:21:52 +01:00
Member

Confirmed.
FCurve cant be found in BKE_animsys_eval_driver()

1  BKE_animsys_eval_driver                                                                                                                                                                                                               anim_sys.c     2917 0x298aa3c      
2  std::__invoke_impl<void, void ( *&)(Depsgraph *, ID *, int, ChannelDriver *), Depsgraph *, ID *&, int&, ChannelDriver *&>                                                                                                             invoke.h       60   0x2f026a1      
3  std::__invoke<void ( *&)(Depsgraph *, ID *, int, ChannelDriver *), Depsgraph *, ID *&, int&, ChannelDriver *&>                                                                                                                        invoke.h       95   0x2f0150b      
4  std::_Bind<void ( *(std::_Placeholder<1>, ID *, int, ChannelDriver *))(Depsgraph *, ID *, int, ChannelDriver *)>::__call<void, Depsgraph *&&, 0ul, 1ul, 2ul, 3ul>(std::tuple<Depsgraph *&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul>) functional     400  0x2f0010a      
5  std::_Bind<void ( *(std::_Placeholder<1>, ID *, int, ChannelDriver *))(Depsgraph *, ID *, int, ChannelDriver *)>::operator()<Depsgraph *, void>(Depsgraph *&&)                                                                        functional     484  0x2efe59f      
6  std::_Function_handler<void (Depsgraph *), std::_Bind<void ( *(std::_Placeholder<1>, ID *, int, ChannelDriver *))(Depsgraph *, ID *, int, ChannelDriver *)>>::_M_invoke(std::_Any_data const&, Depsgraph *&&)                         std_function.h 297  0x2efbd33      
7  std::function<void (Depsgraph *)>::operator()(Depsgraph *) const                                                                                                                                                                      std_function.h 687  0x2f12881      
8  DEG::deg_task_run_func                                                                                                                                                                                                                deg_eval.cc    94   0x2f12015      
9  task_scheduler_thread_run                                                                                                                                                                                                             task.c         441  0x2ed5655      
10 start_thread                                                                                                                                                                                                                                              0x7ffff480658e 
11 clone   

@Sergey: mind having a look?

Confirmed. FCurve cant be found in `BKE_animsys_eval_driver()` ``` 1 BKE_animsys_eval_driver anim_sys.c 2917 0x298aa3c 2 std::__invoke_impl<void, void ( *&)(Depsgraph *, ID *, int, ChannelDriver *), Depsgraph *, ID *&, int&, ChannelDriver *&> invoke.h 60 0x2f026a1 3 std::__invoke<void ( *&)(Depsgraph *, ID *, int, ChannelDriver *), Depsgraph *, ID *&, int&, ChannelDriver *&> invoke.h 95 0x2f0150b 4 std::_Bind<void ( *(std::_Placeholder<1>, ID *, int, ChannelDriver *))(Depsgraph *, ID *, int, ChannelDriver *)>::__call<void, Depsgraph *&&, 0ul, 1ul, 2ul, 3ul>(std::tuple<Depsgraph *&&>&&, std::_Index_tuple<0ul, 1ul, 2ul, 3ul>) functional 400 0x2f0010a 5 std::_Bind<void ( *(std::_Placeholder<1>, ID *, int, ChannelDriver *))(Depsgraph *, ID *, int, ChannelDriver *)>::operator()<Depsgraph *, void>(Depsgraph *&&) functional 484 0x2efe59f 6 std::_Function_handler<void (Depsgraph *), std::_Bind<void ( *(std::_Placeholder<1>, ID *, int, ChannelDriver *))(Depsgraph *, ID *, int, ChannelDriver *)>>::_M_invoke(std::_Any_data const&, Depsgraph *&&) std_function.h 297 0x2efbd33 7 std::function<void (Depsgraph *)>::operator()(Depsgraph *) const std_function.h 687 0x2f12881 8 DEG::deg_task_run_func deg_eval.cc 94 0x2f12015 9 task_scheduler_thread_run task.c 441 0x2ed5655 10 start_thread 0x7ffff480658e 11 clone ``` @Sergey: mind having a look?

This issue was referenced by 3bf7c846ee

This issue was referenced by 3bf7c846eeb4a728c62100b40463874d83f5b3e0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57996
No description provided.