Fix T57996: Crash - delete node with a driven parameter